--- a/Forecast/src/main/AndroidManifest.xml
+++ b/Forecast/src/main/AndroidManifest.xml
@@ -10,18 +10,6 @@
 
     <uses-permission android:name="android.permission.INTERNET"/>
 
-    <application>
-        <activity
-            android:screenOrientation="portrait"
-            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout"
-            android:name="com.forecast.io.MainActivity"
-            android:label="@string/app_name" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-    </application>
+    <application/>
 
 </manifest>
