--- a/Forecast/src/main/AndroidManifest.xml
+++ b/Forecast/src/main/AndroidManifest.xml
@@ -1,12 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.forecast.io"
-    android:versionCode="1"
-    android:versionName="1.0" >
-
-    <uses-sdk
-        android:minSdkVersion="8"
-        android:targetSdkVersion="16" />
+    package="com.forecast.io" >
 
     <uses-permission android:name="android.permission.INTERNET"/>
 
