--- a/Forecast/build.gradle
+++ b/Forecast/build.gradle
@@ -1,27 +1,31 @@
-buildscript {
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:0.5.+'
-    }
-}
 apply plugin: 'android-library'
 
 repositories {
     mavenCentral()
 }
 
-dependencies {
-    compile 'com.android.support:support-v4:13.0.+'
-}
-
 android {
-    compileSdkVersion 18
-    buildToolsVersion "17.0.0"
+    compileSdkVersion 19
+    buildToolsVersion "19.1.0"
 
     defaultConfig {
         minSdkVersion 8
-        targetSdkVersion 16
+        targetSdkVersion 19
+        versionCode 2
+        versionName "1.1"
     }
+
+    buildTypes {
+
+        release {
+            runProguard false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
+        }
+    }
+}
+
+dependencies {
+    compile 'com.android.support:support-v13:19.0.+'
+
+    compile fileTree(dir: 'libs', include: ['*.jar'])
 }
