--- a/build.gradle
+++ b/build.gradle
@@ -1,1 +1,21 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+
+    dependencies {
+        classpath 'com.android.tools.build:gradle:0.11.+'
+    }
+}
+
+allprojects {
+    repositories {
+        mavenCentral()
+    }
+
+    tasks.withType( JavaCompile ) {
+        options.encoding = "UTF-8"
+
+        options.compilerArgs << "-Xlint:unchecked"
+    }
+}
